--- a/pages/gamegear/gamegear.html
+++ b/pages/gamegear/gamegear.html
@@ -130,20 +130,19 @@
       <input type="checkbox" id="menu" name="menu" class="m-menu__checkbox" checked>
 <div class="m-menu">
 <div class="m-menu__header">
-<a href="https://hv-leaf.github.io/Ch3at/pages/nintendo.html" rel="noopener noreferrer">
+<a href="https://hv-leaf.github.io/Ch3at/pages/sega.html" rel="noopener noreferrer">
   <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs">
     <path d="M19 12H6M12 5l-7 7 7 7"/>
   </svg>
 </a>
 
-<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
+<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
         <!-- Catalog starts here -->   
-
-<!-- nes # -->
+<!-- gamegear # -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/09.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(#)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/09.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(#)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -152,14 +151,14 @@
     </a>
     </ul>
 </li>
-<!-- End nes #-->
+<!-- End gamegear #-->
 
 
-<!-- nes a -->
+<!-- gamegear a -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/a.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(a)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/a.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(a)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -168,13 +167,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes a-->
+<!-- End gamegear a-->
 
-<!-- nes b -->
+<!-- gamegear b -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/b.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(b)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/b.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(b)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -183,13 +182,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes b-->
+<!-- End gamegear b-->
 
-<!-- nes c -->
+<!-- gamegear c -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/c.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(c)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/c.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(c)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -198,13 +197,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes c-->
+<!-- End gamegear c-->
 
-<!-- nes d -->
+<!-- gamegear d -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/d.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(d)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/d.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(d)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -213,12 +212,12 @@
     </a>
     </ul>
 </li>
-<!-- End nes d-->
-<!-- nes e -->
+<!-- End gamegear d-->
+<!-- gamegear e -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/e.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(e)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/e.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(e)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -227,13 +226,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes e-->
+<!-- End gamegear e-->
 
-<!-- nes f -->
+<!-- gamegear f -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/f.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(f)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/f.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(f)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -242,13 +241,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes f-->
+<!-- End gamegear f-->
 
-<!-- nes g -->
+<!-- gamegear g -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/g.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(g)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/g.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(g)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -257,13 +256,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes g-->
+<!-- End gamegear g-->
 
-<!-- nes h -->
+<!-- gamegear h -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/h.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(h)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/h.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(h)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -272,13 +271,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes h-->
+<!-- End gamegear h-->
 
-<!-- nes i -->
+<!-- gamegear i -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/i.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(i)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/i.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(i)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -287,13 +286,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes i-->
+<!-- End gamegear i-->
 
-<!-- nes j -->
+<!-- gamegear j -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/j.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(j)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/j.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(j)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -302,13 +301,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes j-->
+<!-- End gamegear j-->
 
-<!-- nes k -->
+<!-- gamegear k -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/k.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(k)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/k.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(k)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -317,13 +316,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes k-->
+<!-- End gamegear k-->
 
-<!-- nes l -->
+<!-- gamegear l -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/l.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(l)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/l.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(l)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -332,13 +331,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes l-->
+<!-- End gamegear l-->
 
-<!-- nes m -->
+<!-- gamegear m -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/m.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(m)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/m.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(m)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -347,13 +346,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes m-->
+<!-- End gamegear m-->
 
-<!-- nes n -->
+<!-- gamegear n -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/n.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(n)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/n.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(n)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -362,13 +361,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes n-->
+<!-- End gamegear n-->
 
-<!-- nes o -->
+<!-- gamegear o -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/o.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(o)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/o.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(o)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -377,13 +376,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes o-->
+<!-- End gamegear o-->
 
-<!-- nes p -->
+<!-- gamegear p -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/p.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(p)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/p.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(p)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -392,13 +391,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes p-->
+<!-- End gamegear p-->
 
-<!-- nes q -->
+<!-- gamegear q -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/q.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(q)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/q.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(q)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -407,13 +406,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes q-->
+<!-- End gamegear q-->
 
-<!-- nes r -->
+<!-- gamegear r -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/r.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(r)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/r.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(r)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -422,13 +421,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes r-->
+<!-- End gamegear r-->
 
-<!-- nes s -->
+<!-- gamegear s -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/s.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(s)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/s.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(s)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -437,13 +436,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes s-->
+<!-- End gamegear s-->
 
-<!-- nes t -->
+<!-- gamegear t -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/t.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(t)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/t.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(t)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -452,13 +451,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes t-->
+<!-- End gamegear t-->
 
-<!-- nes u -->
+<!-- gamegear u -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/u.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(u)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/u.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(u)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -467,13 +466,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes u-->
+<!-- End gamegear u-->
 
-<!-- nes v -->
+<!-- gamegear v -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/v.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(v)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/v.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(v)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -482,13 +481,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes v-->
+<!-- End gamegear v-->
 
-<!-- nes w -->
+<!-- gamegear w -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/w.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(w)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/w.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(w)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -497,13 +496,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes w-->
+<!-- End gamegear w-->
 
-<!-- nes x -->
+<!-- gamegear x -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/x.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(x)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/x.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(x)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -512,13 +511,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes x-->
+<!-- End gamegear x-->
 
-<!-- nes y -->
+<!-- gamegear y -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/y.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(y)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/y.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(y)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -527,13 +526,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes y-->
+<!-- End gamegear y-->
 
-<!-- nes z -->
+<!-- gamegear z -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/z.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(z)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/z.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128> <alph>(z)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -542,7 +541,7 @@
     </a>
     </ul>
 </li>
-<!-- End nes z-->
+<!-- End gamegear z-->
     
  <br></br><br></br></ul>
   </div>
